// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillIllustration /> renders correctly for a drill with a video from vimeo 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "height": 1254,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#A6A6A6"
          hidesWhenStopped={true}
          size="large"
        />
        <Text>
          Loading...
        </Text>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 250,
            "overflow": "hidden",
            "width": 750,
          }
        }
      >
        <ViewManagerAdapter_ExpoVideoView
          proxiedProperties={
            Object {
              "onError": [Function],
              "onFullscreenUpdate": [Function],
              "onLoad": [Function],
              "onLoadStart": [Function],
              "onReadyForDisplay": [Function],
              "onStatusUpdate": [Function],
              "resizeMode": "mock",
              "source": undefined,
              "status": Object {},
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#232b2b",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 20,
                "marginLeft": 20,
                "marginTop": 20,
              }
            }
          >
            20
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#232b2b",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 20,
                "marginLeft": 20,
                "marginTop": 20,
              }
            }
          >
            Rower Hamstring
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#d5d5d5",
              "borderRadius": 12.5,
              "borderWidth": 2,
              "height": 25,
              "justifyContent": "center",
              "margin": 22.5,
              "opacity": 1,
              "width": 25,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#DCDCDC",
            "borderBottomWidth": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "fontSize": 20,
                  "marginBottom": 20,
                  "marginLeft": 20,
                  "marginTop": 20,
                }
              }
            >
              8
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 6,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "fontSize": 20,
                  "marginBottom": 20,
                  "marginLeft": 20,
                  "marginTop": 20,
                }
              }
            >
              Full Clean
            </Text>
          </View>
          <View
            style={
              Object {
                "width": 70,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "borderBottomColor": "#DCDCDC",
              "borderBottomWidth": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with animation 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "height": 1174,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 40,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "#cd5c5c",
                "borderRadius": 40,
                "color": "white",
                "height": 40,
                "left": 337.5,
                "position": "absolute",
                "textAlign": "center",
                "textAlignVertical": "center",
                "top": 80.03999999999999,
                "width": 40,
              }
            }
          >
            1
          </Text>
          <Text
            style={
              Object {
                "backgroundColor": "#dcdcdc",
                "borderRadius": 40,
                "color": "black",
                "height": 40,
                "left": 337.5,
                "position": "absolute",
                "textAlign": "center",
                "textAlignVertical": "center",
                "top": 200.1,
                "width": 40,
              }
            }
          >
            2
          </Text>
          <Text
            style={
              Object {
                "backgroundColor": "#cd5c5c",
                "borderRadius": 40,
                "color": "white",
                "height": 40,
                "left": 337.5,
                "position": "absolute",
                "textAlign": "center",
                "textAlignVertical": "center",
                "top": 600.3000000000001,
                "width": 40,
              }
            }
          >
            3
          </Text>
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "black",
                "borderRadius": 20,
                "borderWidth": 2,
                "height": 20,
                "left": 315,
                "position": "absolute",
                "top": 146.74,
                "width": 20,
              }
            }
          />
          <Text>
            Step 
            1
            /
            5
          </Text>
          <View
            style={
              Object {
                "flex": 0.1,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "padding": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                 &lt; 
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 0.1,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "padding": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Lancer
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 0.1,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "padding": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                 &gt; 
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#232b2b",
              "fontSize": 20,
              "fontWeight": "bold",
              "marginBottom": 20,
              "marginLeft": 20,
              "marginTop": 20,
            }
          }
        />
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#d5d5d5",
              "borderRadius": 12.5,
              "borderWidth": 2,
              "height": 25,
              "justifyContent": "center",
              "margin": 22.5,
              "opacity": 1,
              "width": 25,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 6,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#232b2b",
              "fontSize": 16,
              "justifyContent": "center",
              "marginBottom": 20,
              "marginLeft": 20,
              "marginTop": 20,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with no video nor animation 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 1254,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderRadius": 50,
              "height": 100,
              "justifyContent": "center",
              "margin": 20,
              "opacity": 1,
              "width": 100,
            }
          }
          testID="gradientButton"
        >
          <ViewManagerAdapter_ExpoLinearGradient
            proxiedProperties={
              Object {
                "colors": Array [
                  4278759146,
                  4281005464,
                ],
                "endPoint": Array [
                  0,
                  0,
                ],
                "locations": undefined,
                "startPoint": Array [
                  1,
                  1,
                ],
              }
            }
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 50,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              Do it again
            </Text>
          </ViewManagerAdapter_ExpoLinearGradient>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with video 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      cacheEnabled={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://www.youtube.com/embed/JkVHrA5o23o",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
            "height": 1254,
          },
        ]
      }
      useSharedProcessPool={true}
    />
  </View>
</View>
`;
